--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,7 @@ heapless = "~0.5"
 ili9341 = "~0.4"
 
 [dependencies.atsamd-hal]
-git = "https://github.com/atsamd-rs/atsamd"
-rev = "54cb571de48beee6d3a3ba61d87e27185536b879"
+path = "../atsamd/hal"
 
 [dependencies.lis3dh]
 git = "https://github.com/BenBergman/lis3dh-rs"
@@ -71,3 +70,7 @@ name = "blinky"
 
 [[example]]
 name = "orientation"
+
+[[example]]
+name = "buttons"
+# required-features = ["unflappable"]
